--- a/sass/components/_xray.scss
+++ b/sass/components/_xray.scss
@@ -15,7 +15,7 @@
     max-width: 900px;
     height: 500px;
     margin: 0 auto;
-    background-image: url('../images/xray_render1.png');
+    background-image: url('../images/xray_render1.jpg');
     background-size: cover;
     background-position: center;
     border-radius: $radius-lg;
@@ -30,7 +30,7 @@
 #divisor {
     width: 50%;
     height: 100%;
-    background-image: url('../images/no_xray.png');
+    background-image: url('../images/no_xray.jpg');
     background-size: cover;
     background-position: center;
     position: absolute;
