--- a/sass/components/_explode.scss
+++ b/sass/components/_explode.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .explode-section {
-    min-height: 200vh; // Longer scroll for more frames
+    min-height: 200vh; 
     background: linear-gradient(180deg, $black 0%, $white 10%);
     padding: $spacing-xl 0 0;
     position: relative;
